[package]
authors = ["Tom Burdick <tom.burdick@electromatic.us>"]
edition = "2018"
readme = "README.md"
name = "roled"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
cortex-m-rtfm = "0.5.1"
panic-itm = "0.4.1"
embedded-graphics = "=0.6.0-alpha.2"
ssd1306 = "=0.3.0-alpha.3"

stm32f4xx-hal = {version = "0.6", features = ["stm32f446"]}
stm32f4 = {version = "0.8", features = [ "stm32f446", "rt" ]}


# this lets you use `cargo fix`!
[[bin]]
name = "roled"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
